--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
+      "^@/(.*)$": "<rootDir>/src/$1",
+      "test/(.*)$": "<rootDir>/test/$1"
     },
     "moduleFileExtensions": [
       "js",
